<resources>
    <string name="app_name">Habit Tracker</string>

    <!-- default login strings, can be deleted later -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--From firebase login example, need to be edited later -->
    <string name="login_prompt">Please login</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="view_list_button_text">Habit List</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>

    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! \n %2$s</string>


    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="quote_type">Encouragement Quotes</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_quotes_key">quotes_pref</string>

    <!--Action Button-->
    <string name="action_save">Save</string>
    <!--Habits list page -->
    <string name="habit">Habit</string>
    <string name="progress">Progress</string>
    <string name="add_new_habit">Add new habit</string>

    <!--Spinner declaration-->
    <string-array name="habit_array">
        <item>Run</item>
        <item>Drinking</item>
        <item>Meditation</item>
        <item>Reading</item>
        <item>Sleep</item>
        <item>Yoga</item>
    </string-array>

    <!-- Habit detail page -->
    <string name="habit_date">Date:</string>
    <string name="habit_time">Time:</string>
    <string name="delete_habit">Delete</string>
    <string name="edit_habit">Edit Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_detail">Check Detail</string>
    <string name="habit_attr1">Habits</string>
    <string name="habit_attr2">History</string>
    <string name="habit_attr3">List</string>
    <string name="habit_history">Habit History</string>
    <string name="check_list">Check habit list</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!---help fragment -->
    <string name="project_title">Habit Tracker</string>
    <string name="user_guide_title">How it works?</string>
    <string name="user_guide_content">"Click  the "+" button to record a habit. \n\nClick buttons on the top to select habit, it will display all the habit history accordingly. \n\nClick each history log to edit and update the information."</string>

    <!---about fragment -->
    <string name="developer_intro">This project is developed by \n\nQingqing Wu (991554423) \n\nYiqian Chang (991554674) \n\n 2021-12-09</string>

    <!--- menu options -->
    <string name="about_us">About us</string>
    <string name="user_guide_menu">Get help</string>

    <string name="viewList">\n\n\nTo view your habits history, please click button on different categories</string>




</resources>